# wrp_ros2

./: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml
.github/workflows/: default.yml  release-github.yml  release.yml
action/: LiftGoal.action
config/mobile_base/: mobile_base_node_config.yaml
config/peripheral/: gps_receiver_node_config.yaml  imu_sensor_node_config.yaml  lift_server_node_config.yaml
gps_receiver/: CMakeLists.txt  README.md  package.xml
gps_receiver/config/: gps_receiver_node_config.yaml
gps_receiver/include/gps_receiver/: gps_receiver_node.hpp
gps_receiver/launch/: gps_receiver_launch.py
gps_receiver/src/: gps_receiver_main.cpp  gps_receiver_node.cpp
imu_sensor/: CMakeLists.txt  README.md  package.xml
imu_sensor/config/: imu_sensor_node_config.yaml
imu_sensor/include/imu_sensor/: imu_sensor_node.hpp
imu_sensor/launch/: imu_sensor_launch.py
imu_sensor/src/: imu_sensor_node.cpp
include/wrp_ros2/mobile_base/: mobile_base_node.hpp
include/wrp_ros2/peripheral/: gps_receiver_node.hpp  imu_sensor_node.hpp  lift_server_node.hpp  power_regulator_node.hpp  ultrasonic_sensor_node.hpp
launch/: gps_receiver_launch.py  lift_server_launch.py
launch/description/: scout_base_description.launch.py  scout_base_description_nav.launch.py  scout_mini_base_description.launch.py  scout_mini_description.launch.py  scout_v2_description.launch.py  scout_v2_nav_description.launch.py
launch/mobile_base/: mobile_base.launch.py  mobile_base_agilex.launch.py  mobile_base_scout_sensors.launch.py  mobile_base_vbot.launch.py  mobile_base_weston.launch.py  mobile_base_weston_sensors.launch.py  scout.launch.py  scout_mini.launch.py  tracer.launch.py
launch/peripheral/: gps_receiver.launch.py  imu_sensor.launch.py  power_regulator.launch.py  ultrasonic_sensor.launch.py
lift_server/: CMakeLists.txt  package.xml
lift_server/config/: lift_server_node_config.yaml
lift_server/include/lift_server/: lift_server_node.hpp
lift_server/src/: lift_server_node.cpp
msg/mobile_base/: ActuatorState.msg  BumperState.msg  LightCommand.msg  LightControlType.msg  LightState.msg  MotionCommand.msg  MotionControlType.msg  MotionState.msg  RCState.msg  RangeData.msg  RangeDataType.msg  SystemState.msg
msg/peripheral/: LiftState.msg  PowerRegulatorChannelState.msg  PowerRegulatorDeviceState.msg
peripheral/imu_sensor/: CMakeLists.txt  README.md
peripheral/imu_sensor/config/: imu_sensor_node_config.yaml
peripheral/imu_sensor/include/imu_sensor/: imu_sensor_node.hpp
peripheral/imu_sensor/src/: imu_sensor_main.cpp
peripheral/lift_server/: CMakeLists.txt  README.md
peripheral/lift_server/launch/: lift_server_launch.py
sdk_interfaces/: CMakeLists.txt  package.xml
src/mobile_base/: README.md  mobile_base_node.cpp
src/peripheral/: README.md  gps_receiver_node.cpp  imu_sensor_node.cpp  lift_server_node.cpp  power_regulator_node.cpp  ultrasonic_sensor_node.cpp
srv/mobile_base/: AccessControl.srv  ActuatorStateCheck.srv  LightControl.srv  LightStateCheck.srv  MotionReset.srv  RcStateCheck.srv  RenounceControl.srv  SystemStateCheck.srv
srv/peripheral/: PowerRegulatorControl.srv
urdf/: scout_mini.urdf  scout_mini.xacro  scout_mini_wheel.xacro  scout_v2.xacro  scout_v2_nav.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
urdf/scout_v2/: scout_v2.xacro  scout_v2_nav.xacro  scout_v3.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
wrp_ros2/: CMakeLists.txt  package.xml
wrp_sdk_msgs/: CMakeLists.txt  package.xml
wrp_sdk_msgs/action/peripheral/: LiftControl.action
wrp_sdk_msgs/msg/mobile_base/: MotionState.msg  RangeDataArray.msg  RcState.msg  SystemState.msg
wrp_sdk_msgs/msg/peripheral/: LiftState.msg  PowerRegulatorChannelState.msg  PowerRegulatorDeviceState.msg
wrp_sdk_msgs/srv/mobile_base/: AccessControl.srv  AssistedModeControl.srv  LightControl.srv
wrp_sdk_msgs/srv/peripheral/: LiftQuery.srv
wrp_sdk_periph/: CMakeLists.txt  README.md  package.xml
wrp_sdk_periph/config/: README.md  gps_receiver_node_config.yaml
wrp_sdk_periph/include/wrp_sdk_periph/: gps_receiver_node.hpp  imu_sensor_node.hpp  lift_controller_node.hpp  power_regulator_node.hpp  ultrasonic_sensor_node.hpp
wrp_sdk_periph/launch/: gps_receiver.launch.py  imu_sensor.launch.py  lift_controller.launch.py  power_regulator.launch.py  ultrasonic_sensor.launch.py
wrp_sdk_periph/src/: gps_receiver_node.cpp  imu_sensor_node.cpp  lift_controller_node.cpp  power_regulator_node.cpp  ultrasonic_sensor_node.cpp
wrp_sdk_robot/: CMakeLists.txt  README.md  package.xml
wrp_sdk_robot/config/: mobile_base_node_config.yaml
wrp_sdk_robot/include/wrp_sdk_robot/: kinematic_models.hpp  mobile_base_node.hpp
wrp_sdk_robot/launch/: mobile_base.launch.py  mobile_base_scout_sensors.launch.py  scout.launch.py  scout_mini.launch.py  tracer.launch.py
wrp_sdk_robot/launch/description/: scout_mini_description.launch.py  scout_v2_description.launch.py  scout_v2_nav_description.launch.py
wrp_sdk_robot/launch/mobile_base/: mobile_base.launch.py  robooterx.launch.py  scout.launch.py  scout_mini.launch.py  tracer.launch.py
wrp_sdk_robot/src/: mobile_base_node.cpp
wrp_sdk_robot/urdf/scout_mini/: scout_mini.urdf  scout_mini.xacro  scout_mini_wheel.xacro
wrp_sdk_robot/urdf/scout_v2/: scout_v2.xacro  scout_v2_nav.xacro  scout_wheel_type1.xacro  scout_wheel_type2.xacro
