<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wrp_ros2</name>
  <version>0.2.0</version>
  <description>ros2 wrapper around wrp_sdk</description>
  <maintainer email="hans.kurnia@westonrobot.com">hanskw</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>action_msgs</depend>
  <depend>rclcpp</depend>
  <depend>wrp_zbus</depend>
  <depend>wrp_sdk</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>  
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rmw_implementation_cmake</depend>
  <depend>xacro</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
